--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,8 @@ layout: default
 {% include post.html %}
 
 {% if site.disqus and page.comments %}
-    {% include disqus.html %}
+{% include disqus.html %}
+<script src="https://utteranc.es/client.js" repo="jeongsaeyeong/jeongsaeyeong.github.io" issue-term="pathname"
+  label="comment" theme="github-light" crossorigin="anonymous" async>
+  </script>
 {% endif %}
