--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,12 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.BASE_PATH }}/">
-		<img src="//www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+		<img src="https://github.com/jeongsaeyeong/jeongsaeyeong.github.io/assets/140478779/e11626f4-597b-4d2b-b377-dd5f34a3ef6d"
+			class="img-circle" />
 	</a>
 	<h3 class="title">
-        <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
-    </h3>
+		<a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
+	</h3>
 </header>
 
 {% if site.author.bio %}
