--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@
 	font-display: swap;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poiret+One&display=swap');
+
+
 body {
 	color: #2c3e50;
 }
@@ -66,23 +69,32 @@ body {
 	position: fixed;
 	top: 0px;
 	padding-top: 10%;
-	background-color: #2c3e50;
+	background-position: right center;
+	background-repeat: no-repeat;
+	height: 100vh;
+	background-size: cover;
 	color: #fff;
+	background-image: url(../img/205556fgsdl.png);
 }
 
 .sidebar-header {
 	text-align: center;
 	margin-bottom: 10px;
+	z-index: 1;
 }
 
 .sidebar-header .title {
 	letter-spacing: 3px;
+	z-index: 1;
 	text-transform: uppercase;
 }
 
 .sidebar-header .title a {
 	text-decoration: none;
 	color: #fff;
+	width: 80px;
+	height: 80px;
+	z-index: 1;
 }
 
 a.nav-link {
@@ -151,9 +163,10 @@ article .share .gplus:hover {
 	padding-bottom: 10px;
 }
 
-.page-header {
-	color: #e74c3c;
-	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+.page-header {}
+
+.page-header h1 {
+	text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
@@ -212,7 +225,7 @@ article.home h4,
 article.home h5,
 article.home h6 {
 	font-family: 'NanumSquareNeo';
-	color: #5b8fff;
+	color: #000;
 }
 
 article.home h1 a,
@@ -220,14 +233,15 @@ article.home h2 a,
 article.home h3 a,
 article.home h4 a {
 	font-weight: 400;
-	color: #5b8fff;
+	color: #000;
+	transition: all 0.3s;
 }
 
 article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
 article.home h4 a:hover {
-	color: #e74c3c;
+	color: #e6a224;
 }
 
 .author .author-image {
@@ -236,8 +250,12 @@ article.home h4 a:hover {
 }
 
 footer {
-	padding-top: 15px;
+	padding-top: 30px;
 	font-family: 'NanumSquareNeo';
+}
+
+footer p {
+	padding: 20px;
 }
 
 /* nav-vertical-tabs component */
@@ -266,7 +284,7 @@ footer {
 }
 
 .badge {
-	background: #5b8fff;
+	background: #000;
 }
 
 #nav-menu {
@@ -296,4 +314,26 @@ h5,
 h6 {
 	font-family: 'NanumSquareNeo';
 	color: #000;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&display=swap');
+
+@font-face {
+	font-family: 'IropkeBatang';
+	font-weight: normal;
+	font-style: normal;
+	src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot');
+	src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix') format('embedded-opentype'),
+		url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2') format('woff2'),
+		url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff') format('woff'),
+		url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf') format("truetype");
+	font-display: swap;
+}
+
+h1 {
+	font-family: 'IropkeBatang';
+}
+
+.img-circle {
+	border: 1px solid #fff;
 }
