--- a/_includes/post.html
+++ b/_includes/post.html
@@ -93,7 +93,8 @@
 			</section>
 
 			<section class="col-sm-6 author">
-				<img src="//www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" />
+				<img src="https://github.com/jeongsaeyeong/jeongsaeyeong.github.io/assets/140478779/e11626f4-597b-4d2b-b377-dd5f34a3ef6d"
+					class="img-rounded author-image" />
 				<h4 class="section-title author-name">{{site.author.name}}</h4>
 				<p class="author-bio">{{site.author.bio}}</p>
 			</section>
